<resources>
    <string name="app_name">Work Time</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="dash">-</string>
    <string name="loading">Loading&#8230;</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="none">None</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="yearsShort">y</string>
    <string name="monthsShort">m</string>
    <string name="daysShort">d</string>
    <string name="hoursShort">h</string>
    <string name="minutesShort">m</string>
    <string name="secondsShort">s</string>
    <string name="dayMondayShort">Mon</string>
    <string name="dayTuesdayShort">Tue</string>
    <string name="dayWednesdayShort">Wed</string>
    <string name="dayThursdayShort">Thu</string>
    <string name="dayFridayShort">Fri</string>
    <string name="daySaturdayShort">Sat</string>
    <string name="daySundayShort">Sun</string>
    <string name="lbl_delete_all">Delete all</string>
    <string name="lbl_do_nothing">Do nothing</string>
	<string name="dialog_title_error">Error</string>
    <string name="warning_msg_external_storage_unavailable">The storage is not available at the moment. Make sure it\'s mounted and try again. On older devices an SD-card is expected.</string>
    <string name="warning_msg_external_storage_unavailable_short">The storage is not available.</string>
    <string name="warning_msg_external_storage_unwritable">The storage is not writable. You can try again, if this errors stays contact a specialist.</string>
    <string name="warning_msg_external_storage_unwritable_short">The storage is not writable.</string>
    <string name="warning_msg_sd_car_unavailable">Make sure the SD-card is in the device and the SD-card is mounted.</string>
    <string name="warning_msg_sd_car_unavailable_short">No SD-card found</string>
    <string name="acra_crash_report_send">The application has crashed and a crash-report has been sent to the developers</string>
    <string name="error_general_web_exception">Something went wrong while connecting to the web. Please try again. Possibly the server may be down. If you keep seeing this error please report a bug.</string>
    <string name="error_no_network_connection">Your device seems to be offline. Please make sure an internet connection is active and try again.</string>
    <string name="enum_recurrence_daily">Daily</string>
    <string name="enum_recurrence_weekly">Weekly</string>
    <string name="enum_weekly_recurrence_pattern_every_day">Every Day</string>
    <string name="enum_weekly_recurrence_pattern_weekend">Weekend</string>
    <string name="enum_weekly_recurrence_pattern_weekdays">Weekdays</string>
    <string name="enum_weekly_recurrence_pattern_custom">Custom</string>
    <string name="enum_weekly_recurrence_end_doesnt_end">Doesn\'t End</string>
    <string name="enum_weekly_recurrence_end_after_times">After certain times</string>
    <string name="enum_weekly_recurrence_end_after_date">After certain date</string>
    <string name="validation_basic_message">Validation error</string>
    <string name="validation_basic_big_message">A validation error has occurred</string>
    <string name="error_general_required_field">This field is required</string>
    <string name="date_time_selection_button_text_date">Select a date</string>
    <string name="date_time_selection_button_text_time">Select a time</string>
    <string name="default_project_name">Default Project</string>
    <string name="default_project_comment">This is the default project, created when installing the application.</string>
    <string name="default_task_name">Default Task</string>
    <string name="default_task_comment">This is the default task, created when installing the application.</string>
    <string name="home_ab_menu_about">About</string>
    <string name="home_ab_menu_account">Account</string>
    <string name="home_btn_timeregs">Registrations</string>
    <string name="home_btn_projects">Projects</string>
    <string name="home_btn_preferences">Preferences</string>
    <string name="home_btn_reporting">Reporting</string>
    <string name="home_btn_triggers">Automatic Triggers</string>
    <string name="home_comp_start_stop_time_registration_no_ongoing">No ongoing time registration!</string>
    <string name="showcase_home_title">Application Menu</string>
    <string name="showcase_home_text">Open the application menu by clicking the home button</string>
    <string name="showcase_punchbar_title">Punch Bar</string>
    <string name="showcase_punchbar_text">Quickly start and stop a time registration from the punch bar.</string>
    <string name="showcase_projects_title">Projects and Tasks</string>
    <string name="showcase_projects_text">Manage projects and tasks to which your time registrations will be linked</string>
    <string name="showcase_reporting_title">Reporting</string>
    <string name="showcase_reporting_text">Generate reports of your registered data and export to Excel</string>
    <string name="showcase_preferences_title">Preferences</string>
    <string name="showcase_preferences_text">Manage all kinds of settings for time registrations, projects, date and time, account,...</string>
    <string name="showcase_account_title">Online Account</string>
    <string name="showcase_account_text">Create an online account and keep all your data backed up online</string>
    <string name="showcase_about_title">Donate</string>
    <string name="showcase_about_text">If you like the application you can donate to support the development.</string>
    <string name="btn_manage_projects_title">Manage Projects</string>
    <string name="manage_projects_ab_menu_new">New project</string>
    <string name="manage_projects_ab_menu_show_unfinished">Show only unfinished projects</string>
    <string name="manage_projects_ab_menu_show_all">Show all projects</string>
    <string name="msg_delete_project_confirmation">Do you want to delete this project?</string>
    <string name="lbl_empty_project_list">No projects available.</string>
    <string name="msg_delete_project_at_least_one_required">You cannot delete this project. At least one is required.</string>
    <string name="lbl_projects_menu_details">View details</string>
    <string name="lbl_projects_menu_delete">Delete project</string>
    <string name="lbl_projects_menu_mark_finished">Mark finished</string>
    <string name="lbl_projects_menu_mark_unfinished">Mark unfinished</string>
    <string name="msg_mark_project_finished_with_unfinished_tasks_confirmation">This project has unfinished tasks left. Are you sure you want to finish this project?</string>
    <string name="msg_mark_project_finished_not_possible_ongoing_tr">The project cannot be marked as finished as it\'s used in an ongoing time registration&#8230;</string>
    <string name="lbl_projects_menu_add">Add new project</string>
    <string name="lbl_projects_menu_edit">Edit project</string>
    <string name="lbl_projects_menu_copy">Copy project and tasks</string>
    <string name="lbl_add_project_title">Add Project</string>
    <string name="lbl_edit_project_title">Edit Project</string>
    <string name="add_project_ab_menu_save">Save</string>
    <string name="lbl_add_project_name">Project-name:</string>
    <string name="lbl_add_project_comment">Comment:</string>
    <string name="lbl_reporting_criteria_title">Reporting</string>
    <string name="lbl_reporting_criteria_date_range">Date Range</string>
    <string name="lbl_reporting_criteria_project_and_task">Project and Task</string>
    <string name="lbl_reporting_criteria_data_display">Data Display</string>
    <string name="lbl_reporting_criteria_date_from">From</string>
    <string name="lbl_reporting_criteria_date_till">Till</string>
    <string name="lbl_reporting_criteria_project">Project</string>
    <string name="lbl_reporting_criteria_task">Task</string>
    <string name="lbl_reporting_criteria_date_range_spinner_prompt">Select a date range&#8230;</string>
    <string name="lbl_reporting_criteria_show_finished_tasks">Show finished tasks in selection</string>
    <string name="lbl_reporting_criteria_data_grouping">Data grouping</string>
    <string name="lbl_reporting_criteria_data_grouping_prompt">Data grouped by</string>
    <string name="lbl_reporting_criteria_data_order">Data Order</string>
    <string name="lbl_reporting_criteria_data_order_prompt">Select the data position</string>
    <string name="lbl_reporting_criteria_data_display_duration">Display duration</string>
    <string name="lbl_reporting_criteria_data_display_duration_prompt">Select duration display method</string>
    <string name="pref_triggers_category_geofence_title">Geo Fences</string>
    <string name="pref_triggers_category_geofence_do_not_punch_out_on_leave_title">Don\'t punch out when leaving a Geo Fence?</string>
    <string name="pref_triggers_category_geofence_do_not_punch_out_on_leave_summary_on">When you leave a geo fence the ongoing time registration will not be punched out.</string>
    <string name="pref_triggers_category_geofence_do_not_punch_out_on_leave_summary_off">Time registrations that have been started by a geo fence will be punched out when leaving that geo fence.</string>
    <string name="pref_triggers_category_geofence_show_notif_when_not_punched_out_title">Show notification if not punched out</string>
    <string name="pref_triggers_category_geofence_show_notif_when_not_punched_out_summary_on">Show a notification when you leave a geo fence and the ongoing time registration is not punched out.</string>
    <string name="pref_triggers_category_geofence_show_notif_when_not_punched_out_summary_off">Do not show a notification when you leave a geo fence and the ongoing time registration is not punched out.</string>
    <string name="pref_account_sync_interval_title">Synchronisation Interval</string>
    <string name="pref_account_sync_interval_summary">Select after how many hours the device should try to synchronize your data.</string>
    <string name="pref_account_sync_interval_dialog_title">Select Interval</string>
    <string name="pref_account_sync_conflict_handling_title">Synchronisation Conflicts</string>
    <string name="pref_account_sync_conflict_handling_summary">Set up what to do in case of a conflict during synchronisation.</string>
    <string name="pref_account_sync_conflict_handling_dialog_title">Select a Solution</string>
    <string name="pref_account_sync_on_wifi_only_title">Only Synchronize on Wifi</string>
    <string name="pref_account_sync_on_wifi_only_summary">Synchronization will only start when connected on a Wifi network.</string>
    <string name="pref_account_backup_before_sync_title">Create backup before syncing?</string>
    <string name="pref_account_backup_before_sync_summary_on">Create a backup before starting to sync all data.</string>
    <string name="pref_account_backup_before_sync_summary_off">Start syncing all data without creating a backup first.</string>
    <string name="lbl_account_login_email_hint">Email</string>
    <string name="lbl_account_login_password_hint">Password</string>
    <string name="lbl_account_login_link_forgot_password">Forgot your password?</string>
    <string name="lbl_account_login_button_login">Login</string>
    <string name="lbl_account_login_or">OR</string>
    <string name="lbl_account_login_button_register">Create New Account</string>
    <string name="lbl_triggers_caution_message">Caution: Defining triggers to let the application decide when to start a new time registration might not work as expected, so using them is at your own risk! Press this message to know more about this!</string>
    <string name="lbl_triggers_button_geo_fences">Geo Fence Triggers</string>
    <string name="lbl_triggers_button_wifi_networks">Wifi Netowrk Triggers</string>
</resources>