<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Dirk Vranckaert
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="accountSyncInterval"
        android:defaultValue="12"
        android:title="@string/pref_account_sync_interval_title"
        android:summary="@string/pref_account_sync_interval_summary"
        android:entries="@array/pref_account_sync_interval_options"
        android:entryValues="@array/pref_account_sync_interval_option_values"
        android:dialogTitle="@string/pref_account_sync_interval_dialog_title" />
    <ListPreference
        android:key="accountSyncConflictHandling"
        android:defaultValue="SERVER"
        android:title="@string/pref_account_sync_conflict_handling_title"
        android:summary="@string/pref_account_sync_conflict_handling_summary"
        android:entries="@array/pref_account_sync_conflict_handling_options"
        android:entryValues="@array/pref_account_sync_conflict_handling_option_values"
        android:dialogTitle="@string/pref_account_sync_conflict_handling_dialog_title" />
    <CheckBoxPreference
        android:key="accountSyncOnWifiOnly"
        android:defaultValue="true"
        android:title="@string/pref_account_sync_on_wifi_only_title"
        android:summary="@string/pref_account_sync_on_wifi_only_summary"/>
    <CheckBoxPreference
        android:key="accountBackupBeforeSync"
        android:defaultValue="true"
        android:title="@string/pref_account_backup_before_sync_title"
        android:summaryOn="@string/pref_account_backup_before_sync_summary_on"
        android:summaryOff="@string/pref_account_backup_before_sync_summary_off"/>
</PreferenceScreen>