<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 Dirk Vranckaert
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_login_error"
        style="@style/WorkTimeValidationError"/>

    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:hint="@string/lbl_account_login_email_hint"
              android:id="@+id/account_login_email"
              android:inputType="textEmailAddress"/>
    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:hint="@string/lbl_account_login_password_hint"
              android:id="@+id/account_login_password"
              android:password="true"
              android:inputType="textPassword"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/account_login_forgot_password"
            android:text="@string/lbl_account_login_link_forgot_password"
            android:layout_gravity="right"
            android:clickable="true"
            android:textColorHighlight="@color/grey"
            android:singleLine="true"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/account_login_button"
            android:text="@string/lbl_account_login_button_login"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/lbl_account_login_or"
              android:layout_gravity="center_horizontal"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/account_login_register_button"
            android:text="@string/lbl_account_login_button_register"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>
</LinearLayout>