<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2012 Dirk Vranckaert
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <eu.vranckaert.worktime.utils.view.CustomTextView
                style="@style/TitleBarText" android:text="@string/lbl_reporting_criteria_title"/>


        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="fill_parent"
                      android:id="@+id/btn_action_export">
            <ImageView style="@style/TitleBarSeparator" />
            <ImageButton style="@style/TitleBarAction"
                android:src="@drawable/ic_title_export"
                android:onClick="onBatchShareClick" />
        </LinearLayout>

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:src="@drawable/ic_title_generatereport"
            android:onClick="onGenerateReportClick" />
    </LinearLayout>

    <ScrollView android:layout_width="fill_parent"
                android:layout_height="fill_parent">
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/lbl_reporting_criteria_date_range"
                      style="@style/WorkTimeSimpleSubtitle"/>
            <Spinner android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:prompt="@string/lbl_reporting_criteria_date_range_spinner_prompt"
                     android:padding="3dip"
                     android:id="@+id/reporting_criteria_date_range_spinner"/>
            <TableLayout android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:stretchColumns="1">
                <TableRow>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/lbl_reporting_criteria_date_from"
                              android:padding="3dip"
                              android:textSize="@dimen/text_size_medium"/>
                    <Button android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:enabled="false"
                            android:id="@+id/reporting_criteria_date_range_start"/>
                </TableRow>
                <TableRow>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/lbl_reporting_criteria_date_till"
                              android:padding="3dip"
                              android:textSize="@dimen/text_size_medium"/>
                    <Button android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:enabled="false"
                            android:id="@+id/reporting_criteria_date_range_end"/>
                </TableRow>
            </TableLayout>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/lbl_reporting_criteria_project_and_task"
                      style="@style/WorkTimeSimpleSubtitle"
                      android:paddingTop="10dip"/>
            <TableLayout android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:stretchColumns="1">
                <TableRow>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/lbl_reporting_criteria_project"
                              android:padding="3dip"
                              android:textSize="@dimen/text_size_medium"/>
                    <Button android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:id="@+id/reporting_criteria_project"/>
                    <ImageView android:id="@+id/btn_delete_project"
                               android:layout_height="wrap_content"
                               android:layout_width="wrap_content"
                               android:src="@drawable/ic_delete"/>
                </TableRow>
                <TableRow>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/lbl_reporting_criteria_task"
                              android:padding="3dip"
                              android:textSize="@dimen/text_size_medium"/>
                    <Button android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:id="@+id/reporting_criteria_task"/>
                    <ImageView android:id="@+id/btn_delete_task"
                               android:layout_height="wrap_content"
                               android:layout_width="wrap_content"
                               android:src="@drawable/ic_delete"/>
                </TableRow>
            </TableLayout>
            <CheckBox android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/lbl_reporting_criteria_show_finished_tasks"
                      android:checked="false"
                      android:id="@+id/reporting_criteria_show_finished_tasks"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/lbl_reporting_criteria_data_display"
                      style="@style/WorkTimeSimpleSubtitle"/>
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/lbl_reporting_criteria_data_grouping"
                          android:padding="3dip"
                          android:textSize="@dimen/text_size_medium"/>
                <Spinner android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:prompt="@string/lbl_reporting_criteria_data_grouping_prompt"
                         android:padding="3dip"
                         android:id="@+id/reporting_criteria_data_grouping_spinner"/>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/lbl_reporting_criteria_data_order"
                          android:padding="3dip"
                          android:textSize="@dimen/text_size_medium"/>
                <Spinner android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:prompt="@string/lbl_reporting_criteria_data_order_prompt"
                         android:padding="3dip"
                         android:id="@+id/reporting_criteria_data_order_spinner"/>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/lbl_reporting_criteria_data_display_duration"
                          android:padding="3dip"
                          android:textSize="@dimen/text_size_medium"/>
                <Spinner android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:prompt="@string/lbl_reporting_criteria_data_display_duration_prompt"
                         android:padding="3dip"
                         android:id="@+id/reporting_criteria_data_display_duration_spinner"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
