<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Dirk Vranckaert
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".activities.triggers.TriggersActivity"
              android:padding="5dp">
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/lbl_triggers_caution_message"
              android:textStyle="italic"
              android:textColor="@color/caution"
              android:id="@+id/triggers_caution_message"/>
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_triggers_button_geo_fences"
            android:onClick="geoFencesClicked"/>
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_triggers_button_wifi_networks"
            android:onClick="wifiNetworksClicked"/>
</LinearLayout>